adjusting sentiment analysis for emojis + textblob vs nltk sentiment analysis

--- a/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
+++ b/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,12 +31,12 @@
     "nltk.download(\"stopwords\")\n",
     "nltk.download(\"wordnet\")\n",
     "\n",
-    "from nltk.sentiment import SentimentIntensityAnalyzer as sia"
+    "from nltk.sentiment import SentimentIntensityAnalyzer as SIA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,15 +49,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "data/.DS_Store\ndata/Company.csv\ndata/Company_Tweet.csv\ndata/Tweet.csv\ndata/stocks/Company.csv\ndata/stocks/CompanyValues.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#provides relative paths for csv as referenced from a folder\n",
     "import os\n",
@@ -75,7 +67,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'/Users/kevinvo/Desktop/sentimentML'"
+       "'/Users/kevinvo/CUBigDataClass'"
       ]
      },
      "metadata": {},
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
