adjusting scores for  emojis + TextBlob_NLTK + instructions

--- a/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
+++ b/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
@@ -49,7 +49,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "data/.DS_Store\ndata/Company.csv\ndata/Company_Tweet.csv\ndata/Tweet.csv\ndata/stocks/Company.csv\ndata/stocks/CompanyValues.csv\n"
+     ]
+    }
+   ],
    "source": [
     "#provides relative paths for csv as referenced from a folder\n",
     "import os\n",
@@ -67,7 +75,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'/Users/kevinvo/CUBigDataClass'"
+       "'/Users/kevinvo/Desktop/sentimentML'"
       ]
      },
      "metadata": {},
@@ -112,12 +120,22 @@
     }
    ],
    "source": [
+    "# 1. Via pip:\n",
+    "# $ pip install emot --upgrade\n",
+    "\n",
     "import sys\n",
     "!{sys.executable} -m pip install emot --upgrade\n",
+    "\n",
+    "# 2. From master branch: \n",
+    "# $ git clone https://github.com/NeelShah18/emot.git\n",
+    "# $ cd emot\n",
+    "# $ python setup.py install\n",
+    "\n",
     "import emot\n",
     "\n",
     "def clean_mean(val):\n",
     "    return val.replace('_', ' ').replace('-', ' ').replace(':', ' ')\n",
+    "\n",
     "def convert_emojicon(text, isPrint=True):\n",
     "    for emoti in emot.emo_unicode.EMOTICONS:\n",
     "        if emoti in text:\n",
@@ -187,7 +205,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "😞\n disappointed face \npre-adjustments: 0.0; post-adjustments: -0.75\n\n---\n\n🙁\n slightly frowning face \npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n\n---\n\n😀\n grinning face \npre-adjustments: 0.0; post-adjustments: 0.0\n\n---\n\n🙂\n slightly smiling face \npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n"
+      "😞\npre-adjustments: 0.0; post-adjustments: -0.75\n\n---\n\n🙁\npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n\n---\n\n😀\npre-adjustments: 0.0; post-adjustments: 0.0\n\n---\n\n🙂\npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n"
      ]
     }
    ],
@@ -196,25 +214,25 @@
     "#\n",
     "sample_sad = \"😞\"\n",
     "sample_sad=stem_tokenize(sample_sad)\n",
-    "print(convert_emojicon(sample_sad, isPrint==True))\n",
+    "convert_emojicon(sample_sad, isPrint==True)\n",
     "compareAdjustedScores(sample_sad)\n",
     "print(\"\\n---\\n\")\n",
     "#\n",
     "sample_sad2 = \"🙁\"\n",
     "sample_sad2=stem_tokenize(sample_sad2)\n",
-    "print(convert_emojicon(sample_sad2, isPrint==True))\n",
+    "convert_emojicon(sample_sad2, isPrint==True)\n",
     "compareAdjustedScores(sample_sad2)\n",
     "print(\"\\n---\\n\")\n",
     "#\n",
     "sample_happy = \"😀\"\n",
     "sample_happy=stem_tokenize(sample_happy)\n",
-    "print(convert_emojicon(sample_happy, isPrint==True))\n",
+    "convert_emojicon(sample_happy, isPrint==True)\n",
     "compareAdjustedScores(sample_happy)\n",
     "print(\"\\n---\\n\")\n",
     "#\n",
     "sample_happy2= \"🙂\"\n",
     "sample_happy2=stem_tokenize(sample_happy2)\n",
-    "print(convert_emojicon(sample_happy2, isPrint==True))\n",
+    "convert_emojicon(sample_happy2, isPrint==True)\n",
     "compareAdjustedScores(sample_happy2)"
    ]
   },
