adjusting scores for  emojis + TextBlob_NLTK + instructions

--- a/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
+++ b/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
@@ -49,15 +49,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "data/.DS_Store\ndata/Company.csv\ndata/Company_Tweet.csv\ndata/Tweet.csv\ndata/stocks/Company.csv\ndata/stocks/CompanyValues.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#provides relative paths for csv as referenced from a folder\n",
     "import os\n",
@@ -75,7 +67,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'/Users/kevinvo/Desktop/sentimentML'"
+       "'/Users/kevinvo/CUBigDataClass'"
       ]
      },
      "metadata": {},
@@ -300,21 +292,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Case 3: mixed emotions \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.408, 'neu': 0.263, 'pos': 0.329, 'compound': -0.1531}\n\n0.0 -0.1531 \n\n"
+      "Case 3: mixed emotions \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.408, 'neu': 0.263, 'pos': 0.329, 'compound': -0.1531}\n\ntokenize than convert:  0.0 -0.1531 \n\nCase 3: mixed emotions \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.346, 'neu': 0.256, 'pos': 0.397, 'compound': 0.1027}\n\ntokenize than convert:  0.0 0.1027 \n\n"
      ]
     }
    ],
    "source": [
     "sample_text_mixed = \"😀 😞\"\n",
-    "print(\"Case 3: mixed emotions \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_text_mixed), sia.polarity_scores(convert_emojicon(sample_text_mixed, isPrint==False))))\n",
-    "print(sia.polarity_scores(sample_text_mixed)['compound'], sia.polarity_scores(convert_emojicon(sample_text_mixed, isPrint==False))['compound'],'\\n')"
+    "\n",
+    "### tokenize than convert\n",
+    "sample_stemtoken=stem_tokenize(sample_text_mixed)\n",
+    "sample_adjusted=convert_emojicon(sample_stemtoken, isPrint==False)\n",
+    "print(\"Case 3: mixed emotions \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_stemtoken), sia.polarity_scores(sample_adjusted)))\n",
+    "\n",
+    "print(\"tokenize than convert: \",sia.polarity_scores(sample_text_mixed)['compound'], sia.polarity_scores(convert_emojicon(sample_text_mixed, isPrint==False))['compound'],'\\n')\n",
+    "\n",
+    "### tokenize after converting\n",
+    "sample_text_mixed = \"😀 😞\"\n",
+    "sample_adjusted=convert_emojicon(sample_text_mixed, isPrint==False)\n",
+    "sample_adjustedtokenized=stem_tokenize(sample_adjusted)\n",
+    "convert_emojicon(sample_text_mixed, isPrint==False)\n",
+    "print(\"Case 3: mixed emotions \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_text_mixed), sia.polarity_scores(sample_adjustedtokenized)))\n",
+    "\n",
+    "print(\"tokenize than convert: \", sia.polarity_scores(sample_text_mixed)['compound'], sia.polarity_scores(sample_adjustedtokenized)['compound'],'\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'grin face disappoint face'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "sample_adjustedtokenized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "' grinning face   disappointed face '"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "sample_adjusted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'😀 😞'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "sample_text_mixed"
    ]
   },
   {
