adjusting scores for  emojis + TextBlob_NLTK + instructions

--- a/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
+++ b/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
@@ -255,7 +255,6 @@
     "\n",
     "###\n",
     "sample_text_sad1a = \"😞\"\n",
-    "sample_text_sad1a=stem_tokenize(sample_text_sad1a)\n",
     "score_sad1a, processedScore_sad1a = sia.polarity_scores(sample_text_sad1a), sia.polarity_scores(convert_emojicon(sample_text_sad1a, isPrint==False))\n",
     "print(\"\\nCase 1a:  disappointed face\\n pre-emoji processing: {}\\n post-emoji processing: {}\\n\".format(score_sad1a, processedScore_sad1a))\n",
     "print(\"before: {}; after: {}\".format(score_sad1a['compound'], processedScore_sad1a['compound'],'\\n'))\n",
@@ -264,8 +263,6 @@
     "####\n",
     "\n",
     "sample_text_sad1b = \"🙁\"\n",
-    "\n",
-    "sample_text_sad1b=stem_tokenize(sample_text_sad1b)\n",
     "score_sad1b, processedScore_sad1b = sia.polarity_scores(sample_text_sad1b), sia.polarity_scores(convert_emojicon(sample_text_sad1b, isPrint==False))\n",
     "print(\"\\nCase 1b:  slightly frowning face \\n pre-emoji processing: {}\\n post-emoji processing: {}\\n\".format(score_sad1b, processedScore_sad1b))\n",
     "print(\"before: {}; after: {}\".format(score_sad1b['compound'], processedScore_sad1b['compound'],'\\n'))\n",
@@ -274,7 +271,6 @@
     "###\n",
     "\n",
     "sample_text_happy2a = \"😀\"\n",
-    "sample_text_happy2a=stem_tokenize(sample_text_happy2a)\n",
     "print(\"\\nCase 2a: grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_text_happy2a), sia.polarity_scores(convert_emojicon(sample_text_happy2a, isPrint==False))))\n",
     "print(\"before: {}; after: {}\".format(sia.polarity_scores(sample_text_happy2a)['compound'], sia.polarity_scores(convert_emojicon(sample_text_happy2a, isPrint==False))['compound'],'\\n'))\n",
     "\n",
@@ -282,7 +278,6 @@
     "###\n",
     "\n",
     "sample_text_happy2b = \"🙂\"\n",
-    "sample_text_happy2b=stem_tokenize(sample_text_happy2b)\n",
     "score_happy2b, processedScore_happy2b = sia.polarity_scores(sample_text_happy2b), sia.polarity_scores(convert_emojicon(sample_text_happy2b, isPrint==False))\n",
     "print(\"\\nCase 2b: slightly smiling face \\n pre-emoji processing: {}\\n post-emoji processing: {}\\n\".format(score_happy2b, processedScore_happy2b))\n",
     "print(\"before: {}; after: {}\".format(score_happy2b['compound'], processedScore_happy2b['compound'],'\\n'))\n",
@@ -291,52 +286,63 @@
    ]
   },
   {
+   "source": [
+    "----\n",
+    "- adjusting score, without tokenization\n",
+    "\n",
+    "- adjusting score, then tokenization \n",
+    "\n",
+    "(to eval how tokenization influences adjusted polarity scores for emojis)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Case 3: mixed emotions \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.408, 'neu': 0.263, 'pos': 0.329, 'compound': -0.1531}\n\ntokenize than convert:  0.0 -0.1531 \n\nCase 3: mixed emotions \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.346, 'neu': 0.256, 'pos': 0.397, 'compound': 0.1027}\n\ntokenize than convert:  0.0 0.1027 \n\n"
+      "Case 3: no tokenization, grinning face \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.0, 'neu': 0.286, 'pos': 0.714, 'compound': 0.3612}\n\nadjust score without tokenization:  0.0 0.3612 \n\nCase 3: +tokenization, grinning face \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.0, 'neu': 0.244, 'pos': 0.756, 'compound': 0.4767}\n\nadjust score WITH tokenization:  0.0 0.4767 \n\n"
      ]
     }
    ],
    "source": [
-    "sample_text_mixed = \"😀 😞\"\n",
-    "\n",
     "### tokenize than convert\n",
-    "sample_stemtoken=stem_tokenize(sample_text_mixed)\n",
-    "sample_adjusted=convert_emojicon(sample_stemtoken, isPrint==False)\n",
-    "print(\"Case 3: mixed emotions \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_stemtoken), sia.polarity_scores(sample_adjusted)))\n",
+    "toBe_Adjusted = \"😀\"\n",
+    "sample_adjusted=convert_emojicon(toBe_Adjusted, isPrint==False)\n",
+    "print(\"Case 3: no tokenization, grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(toBe_Adjusted), sia.polarity_scores(sample_adjusted)))\n",
     "\n",
-    "print(\"tokenize than convert: \",sia.polarity_scores(sample_text_mixed)['compound'], sia.polarity_scores(convert_emojicon(sample_text_mixed, isPrint==False))['compound'],'\\n')\n",
+    "print(\"adjust score without tokenization: \",sia.polarity_scores(toBe_Adjusted)['compound'], sia.polarity_scores(sample_adjusted)['compound'],'\\n')\n",
+    "\n",
     "\n",
     "### tokenize after converting\n",
-    "sample_text_mixed = \"😀 😞\"\n",
-    "sample_adjusted=convert_emojicon(sample_text_mixed, isPrint==False)\n",
+    "toBe_Adjusted_Tokenized = \"😀\"\n",
+    "sample_adjusted=convert_emojicon(toBe_Adjusted_Tokenized, isPrint==False)\n",
     "sample_adjustedtokenized=stem_tokenize(sample_adjusted)\n",
-    "convert_emojicon(sample_text_mixed, isPrint==False)\n",
-    "print(\"Case 3: mixed emotions \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_text_mixed), sia.polarity_scores(sample_adjustedtokenized)))\n",
+    "convert_emojicon(toBe_Adjusted_Tokenized, isPrint==False)\n",
+    "print(\"Case 3: +tokenization, grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(toBe_Adjusted_Tokenized), sia.polarity_scores(sample_adjustedtokenized)))\n",
     "\n",
-    "print(\"tokenize than convert: \", sia.polarity_scores(sample_text_mixed)['compound'], sia.polarity_scores(sample_adjustedtokenized)['compound'],'\\n')\n"
+    "print(\"adjust score WITH tokenization: \", sia.polarity_scores(toBe_Adjusted_Tokenized)['compound'], sia.polarity_scores(sample_adjustedtokenized)['compound'],'\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'grin face disappoint face'"
+       "'grin face'"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 11
     }
    ],
    "source": [
@@ -345,18 +351,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "' grinning face   disappointed face '"
+       "' grinning face '"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 12
     }
    ],
    "source": [
@@ -365,22 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'😀 😞'"
+       "'😀'"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 13
     }
    ],
    "source": [
-    "sample_text_mixed"
+    "toBe_Adjusted"
    ]
   },
   {
