adjusting scores for  emojis + TextBlob_NLTK + instructions

--- a/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
+++ b/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 18
     }
    ],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -159,23 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from textblob import TextBlob\n",
     "\n",
-    "def compareAdjustedScores(text):\n",
-    "    adjusted_text = convert_emojicon(text, isPrint==False)\n",
-    "    print(\"pre-adjustments: {}; post-adjustments: {}\".format(TextBlob(text).sentiment.polarity, TextBlob(adjusted_text).sentiment.polarity))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def stem_tokenize(text):\n",
     "    stop_words = stopwords.words(\"english\")\n",
     "    stemmer = SnowballStemmer(\"english\", ignore_stopwords=True)\n",
@@ -185,19 +174,33 @@
     "    tokenized_text = tokenzr.tokenize(text.lower())\n",
     "    words = [lemmatizer.lemmatize(w) for w in tokenized_text if w not in stop_words]\n",
     "    stem_text = \" \".join([stemmer.stem(i) for i in words])\n",
-    "    return stem_text"
+    "\n",
+    "    return stem_text #converted emoji to unicode description of emoji is return as string text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compareAdjustedScores(text):\n",
+    "    adjusted_text = convert_emojicon(text, isPrint==False)\n",
+    "    adjusted_stemmed = stem_tokenize(adjusted_text)\n",
+    "    \n",
+    "    print(\"pre-adjustments: {}; post-adjustments: {}\".format(TextBlob(text).sentiment.polarity, TextBlob(adjusted_stemmed).sentiment.polarity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "😞\npre-adjustments: 0.0; post-adjustments: -0.75\n\n---\n\n🙁\npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n\n---\n\n😀\npre-adjustments: 0.0; post-adjustments: 0.0\n\n---\n\n🙂\npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n"
+      "😞\n disappointed face \npre-adjustments: 0.0; post-adjustments: 0.0\n\n---\n\n🙁\n slightly frowning face \npre-adjustments: 0.0; post-adjustments: -0.16666666666666666\n\n---\n\n😀\n grinning face \npre-adjustments: 0.0; post-adjustments: 0.0\n\n---\n\n🙂\n slightly smiling face \npre-adjustments: 0.0; post-adjustments: 0.06666666666666667\n"
      ]
     }
    ],
@@ -205,26 +208,22 @@
     "isPrint = True\n",
     "#\n",
     "sample_sad = \"😞\"\n",
-    "sample_sad=stem_tokenize(sample_sad)\n",
-    "convert_emojicon(sample_sad, isPrint==True)\n",
+    "print(returnedText:=convert_emojicon(sample_sad, isPrint==True)) #converted emoji to unicode description of emoji is return as string text\n",
     "compareAdjustedScores(sample_sad)\n",
     "print(\"\\n---\\n\")\n",
     "#\n",
     "sample_sad2 = \"🙁\"\n",
-    "sample_sad2=stem_tokenize(sample_sad2)\n",
-    "convert_emojicon(sample_sad2, isPrint==True)\n",
+    "print(returnedText:=convert_emojicon(sample_sad2, isPrint==True))\n",
     "compareAdjustedScores(sample_sad2)\n",
     "print(\"\\n---\\n\")\n",
     "#\n",
     "sample_happy = \"😀\"\n",
-    "sample_happy=stem_tokenize(sample_happy)\n",
-    "convert_emojicon(sample_happy, isPrint==True)\n",
+    "print(returnedText:=convert_emojicon(sample_happy, isPrint==True))\n",
     "compareAdjustedScores(sample_happy)\n",
     "print(\"\\n---\\n\")\n",
     "#\n",
     "sample_happy2= \"🙂\"\n",
-    "sample_happy2=stem_tokenize(sample_happy2)\n",
-    "convert_emojicon(sample_happy2, isPrint==True)\n",
+    "print(returnedText:=convert_emojicon(sample_happy2, isPrint==True))\n",
     "compareAdjustedScores(sample_happy2)"
    ]
   },
@@ -238,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\nCase 1a:  disappointed face\n pre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\n post-emoji processing: {'neg': 0.756, 'neu': 0.244, 'pos': 0.0, 'compound': -0.4767}\n\nbefore: 0.0; after: -0.4767\n😞\n disappointed face \n\nCase 1b:  slightly frowning face \n pre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\n post-emoji processing: {'neg': 0.513, 'neu': 0.487, 'pos': 0.0, 'compound': -0.2748}\n\nbefore: 0.0; after: -0.2748\n🙁\n slightly frowning face \n\nCase 2a: grinning face \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.0, 'neu': 0.286, 'pos': 0.714, 'compound': 0.3612}\n\nbefore: 0.0; after: 0.3612\n😀\n grinning face \n\nCase 2b: slightly smiling face \n pre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\n post-emoji processing: {'neg': 0.0, 'neu': 0.425, 'pos': 0.575, 'compound': 0.4033}\n\nbefore: 0.0; after: 0.4033\n🙂\n slightly smiling face \n"
+      "\nCase 1a:  disappointed face\n pre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\n post-emoji processing: {'neg': 0.73, 'neu': 0.27, 'pos': 0.0, 'compound': -0.4019}\n\nbefore: 0.0; after: -0.4019\n😞\ndisappoint face\n\nCase 1b:  slightly frowning face \n pre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\n post-emoji processing: {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n\nbefore: 0.0; after: 0.0\n🙁\n slightly frowning face \n\nCase 2a: grinning face \npre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\npost-emoji processing: {'neg': 0.0, 'neu': 0.244, 'pos': 0.756, 'compound': 0.4767}\n\nbefore: 0.0; after: 0.4767\n😀\n grinning face \n\nCase 2b: slightly smiling face \n pre-emoji processing: {'neg': 0.0, 'neu': 0.0, 'pos': 0.0, 'compound': 0.0}\n post-emoji processing: {'neg': 0.0, 'neu': 0.425, 'pos': 0.575, 'compound': 0.4033}\n\nbefore: 0.0; after: 0.4033\n🙂\n slightly smiling face \n"
      ]
     }
    ],
@@ -255,15 +254,15 @@
     "\n",
     "###\n",
     "sample_text_sad1a = \"😞\"\n",
-    "score_sad1a, processedScore_sad1a = sia.polarity_scores(sample_text_sad1a), sia.polarity_scores(convert_emojicon(sample_text_sad1a, isPrint==False))\n",
+    "score_sad1a, processedScore_sad1a = sia.polarity_scores(sample_text_sad1a), sia.polarity_scores(score_adjustedStemmed:=stem_tokenize(convert_emojicon(sample_text_sad1a, isPrint==False)))\n",
     "print(\"\\nCase 1a:  disappointed face\\n pre-emoji processing: {}\\n post-emoji processing: {}\\n\".format(score_sad1a, processedScore_sad1a))\n",
     "print(\"before: {}; after: {}\".format(score_sad1a['compound'], processedScore_sad1a['compound'],'\\n'))\n",
     "\n",
-    "print(convert_emojicon(sample_text_sad1a, isPrint==True))\n",
+    "print(score_adjustedStemmed:=stem_tokenize(convert_emojicon(sample_text_sad1a, isPrint==True)))\n",
     "####\n",
     "\n",
     "sample_text_sad1b = \"🙁\"\n",
-    "score_sad1b, processedScore_sad1b = sia.polarity_scores(sample_text_sad1b), sia.polarity_scores(convert_emojicon(sample_text_sad1b, isPrint==False))\n",
+    "score_sad1b, processedScore_sad1b = sia.polarity_scores(sample_text_sad1b), sia.polarity_scores(score_adjustedStemmed:=stem_tokenize(convert_emojicon(sample_text_sad1b, isPrint==False)))\n",
     "print(\"\\nCase 1b:  slightly frowning face \\n pre-emoji processing: {}\\n post-emoji processing: {}\\n\".format(score_sad1b, processedScore_sad1b))\n",
     "print(\"before: {}; after: {}\".format(score_sad1b['compound'], processedScore_sad1b['compound'],'\\n'))\n",
     "\n",
@@ -271,8 +270,9 @@
     "###\n",
     "\n",
     "sample_text_happy2a = \"😀\"\n",
-    "print(\"\\nCase 2a: grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(sample_text_happy2a), sia.polarity_scores(convert_emojicon(sample_text_happy2a, isPrint==False))))\n",
-    "print(\"before: {}; after: {}\".format(sia.polarity_scores(sample_text_happy2a)['compound'], sia.polarity_scores(convert_emojicon(sample_text_happy2a, isPrint==False))['compound'],'\\n'))\n",
+    "score_happy2a, processedScore_happy2a = sia.polarity_scores(sample_text_happy2a), sia.polarity_scores(score_adjustedStemmed:=stem_tokenize(convert_emojicon(sample_text_happy2a, isPrint==False)))\n",
+    "print(\"\\nCase 2a: grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(score_happy2a,processedScore_happy2a))\n",
+    "print(\"before: {}; after: {}\".format(score_happy2a['compound'], processedScore_happy2a['compound'],'\\n'))\n",
     "\n",
     "print(convert_emojicon(sample_text_happy2a, isPrint==True))\n",
     "###\n",
@@ -286,13 +286,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'neg': 0.513, 'neu': 0.487, 'pos': 0.0, 'compound': -0.2748}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "' slightly frowning face '"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "print(sia.polarity_scores(scoreAdjusted:=convert_emojicon(sample_text_sad1b, isPrint==False)))\n",
+    "scoreAdjusted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'slight frown face'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "print(sia.polarity_scores(score_adjustedStemmed:=stem_tokenize(convert_emojicon(sample_text_sad1b, isPrint==False))))\n",
+    "score_adjustedStemmed"
+   ]
+  },
+  {
    "source": [
     "----\n",
     "- adjusting score, without tokenization\n",
     "\n",
     "- adjusting score, then tokenization \n",
     "\n",
-    "(to eval how tokenization influences adjusted polarity scores for emojis)\n"
+    "(eval how tokenization/stemmatization influences adjusted polarity scores for emojis)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -320,18 +376,18 @@
     "\n",
     "\n",
     "### tokenize after converting\n",
-    "toBe_Adjusted_Tokenized = \"😀\"\n",
-    "sample_adjusted=convert_emojicon(toBe_Adjusted_Tokenized, isPrint==False)\n",
-    "sample_adjustedtokenized=stem_tokenize(sample_adjusted)\n",
-    "convert_emojicon(toBe_Adjusted_Tokenized, isPrint==False)\n",
-    "print(\"Case 3: +tokenization, grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(toBe_Adjusted_Tokenized), sia.polarity_scores(sample_adjustedtokenized)))\n",
+    "toBe_adjusted_stemmed = \"😀\"\n",
+    "sample_adjusted=convert_emojicon(toBe_adjusted_stemmed, isPrint==False)\n",
+    "sample_adjustedStemmed=stem_tokenize(sample_adjusted)\n",
+    "convert_emojicon(toBe_adjusted_stemmed, isPrint==False)\n",
+    "print(\"Case 3: +tokenization, grinning face \\npre-emoji processing: {}\\npost-emoji processing: {}\\n\".format(sia.polarity_scores(toBe_adjusted_stemmed), sia.polarity_scores(sample_adjustedStemmed)))\n",
     "\n",
-    "print(\"adjust score WITH tokenization: \", sia.polarity_scores(toBe_Adjusted_Tokenized)['compound'], sia.polarity_scores(sample_adjustedtokenized)['compound'],'\\n')\n"
+    "print(\"adjust score WITH tokenization: \", sia.polarity_scores(toBe_adjusted_stemmed)['compound'], sia.polarity_scores(sample_adjustedStemmed)['compound'],'\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -342,16 +398,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 40
     }
    ],
    "source": [
-    "sample_adjustedtokenized"
+    "sample_adjustedStemmed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +418,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 41
     }
    ],
    "source": [
@@ -371,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +438,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 42
     }
    ],
    "source": [
