Added jupyter notebook

--- a/scripts/Grab Tweets and Prices.ipynb
+++ b/scripts/Grab Tweets and Prices.ipynb
@@ -136,6 +136,7 @@
     "sia = SIA()\n",
     "\n",
     "count = 0\n",
+    "sentiment_counter = 0\n",
     "for tweet in tweets:\n",
     "    tweet_id = tweet.id\n",
     "    tweet_time = tweet.created_at\n",
@@ -153,6 +154,7 @@
     "    tweet_text = convert_emojicon(tweet_text)\n",
     "    \n",
     "    tweet_sentiment = TextBlob(tweet_text).sentiment.polarity\n",
+    "    sentiment_counter += tweet_sentiment\n",
     "        \n",
     "    print(tweet_id, tweet_date, tweet_username, hashtags, link, tweet_text, tweet_sentiment)\n",
     "    count += 1\n",
