--- a/scripts/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
+++ b/scripts/adjustedPolarityScoreEmojis_TextBlobNLTK.ipynb
@@ -21,6 +21,9 @@
     "import matplotlib.ticker as tkr\n",
     "import seaborn as sns\n",
     "import scipy as stats\n",
+    "import tweepy as tw\n",
+    "import emot\n",
+    "from textblob import TextBlob\n",
     "\n",
     "import nltk # sentiment library\n",
     "from nltk.tokenize import TweetTokenizer\n",
